# NexusSearch

./: .gitignore  AGENTS.md  CONDITIONAL_COMPILATION_FIX.md  QWEN.md  go.work  go.work.sum
bm25/: Cargo.toml  README.md  build.rs  cargo_errors_report.md
bm25/configs/: config.toml
bm25/docs/config/: configuration_improvement_plan.md  configuration_reference.md
bm25/docs/tests/: test_coverage_analysis.md  test_supplement_suggestions.md
bm25/examples/: basic_search.rs  crud_operations.rs  custom_config.rs
bm25/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  proto.rs  service.rs
bm25/src/api/core/: batch.rs  delete.rs  document.rs  index.rs  mod.rs  stats_extractor.rs
bm25/src/api/embedded/: index.rs
bm25/src/api/server/: config.rs  grpc.rs  mod.rs
bm25/src/config/: builder.rs  loader.rs  mod.rs  validator.rs
bm25/src/index/: api.rs  cache.rs  manager.rs  mod.rs  tests.rs
bm25/src/service/: config.rs  grpc.rs  mod.rs
bm25/src/storage/: factory.rs  manager.rs  mod.rs  redis.rs  tantivy.rs
bm25/src/storage/common/: trait.rs
bm25/tests/: batch_operations_test.rs  cache_test.rs  concurrency_test.rs  config_test.rs  consistency_test.rs  document_operations_test.rs  error_handling_test.rs  index_manager_test.rs  integration_test.rs  persistence_test.rs  search_test.rs  service_test.rs  storage_test.rs
coordinator/: go.mod
coordinator/cmd/: main.go
coordinator/configs/: config.yaml
coordinator/internal/config/: engines.go
coordinator/internal/engine/: embedding_service.go  qdrant_client.go  vector.go  vector_index.go
coordinator/internal/server/: coordinator.go
docs/: search_engines_analysis.md
docs/config/: configuration_improvement_summary.md
docs/plan/: ref-bm25服务端功能补充设计方案.md  vector-feature-gap-analysis.md  vector-integration-analysis.md
docs/plan/inversearch/: batch-operations-optimization-design.md  document-enrichment-enhancement-design.md  field-boost-design.md  tree-parsing-enhancement-design.md
inversearch/: Cargo.toml  build.rs  cargo_errors_report.md
inversearch/docs/: storage_refactoring_analysis.md
inversearch/docs/storage/: REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  architecture_design.md  directory_structure.md  migration_plan.md  module_organization_analysis.md  storage_manager_design.md
inversearch/proto/: inversearch.proto
inversearch/src/: lib.rs  serialize.rs  service.rs
inversearch/src/common/: mod.rs
inversearch/src/compress/: cache.rs  lcg.rs  mod.rs
inversearch/src/config/: mod.rs
inversearch/src/document/: batch.rs  mod.rs  (+2 more)
inversearch/tests/: storage_test.rs
(+60 files in other folders)
