[package]
name = "bm25-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bm25-service"
path = "src/main.rs"
required-features = ["service"]

[features]
default = ["service"]
service = ["tonic", "prost", "tokio/full", "redis", "tracing", "tracing-subscriber", "metrics", "serde_json", "toml", "chrono"]
cache = []
persistence = []

[dependencies]
# 核心依赖（始终编译）
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tantivy = "0.24"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# 服务依赖（可选）
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

# 功能依赖（可选）
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
metrics = { version = "0.23", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.10"
