[package]
name = "bm25-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "bm25_service"
path = "src/lib.rs"

[[bin]]
name = "bm25-server"
path = "src/main.rs"
required-features = ["service"]

[features]
default = ["embedded"]
embedded = []
service = [
    "tonic",
    "prost",
    "tokio/full",
    "redis",
    "tracing",
    "tracing-subscriber",
    "metrics",
    "prost-build",
    "tonic-build",
]

[dependencies]
tantivy = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
toml = "0.8"

tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
metrics = { version = "0.23", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.10"
